logs/aws-lambda-fsm.log
Listing '.'...
Listing './bin'...
Compiling './bin/create_dynamodb_table.py'...
Compiling './bin/create_kinesis_stream.py'...
Compiling './bin/create_resources.py'...
Compiling './bin/create_sns_topic.py'...
Compiling './bin/create_sqs_queue.py'...
Compiling './bin/dev_ecs.py'...
Compiling './bin/dev_lambda.py'...
Compiling './bin/fsm_docker_runner.py'...
Compiling './bin/fsm_sqs_to_arn.py'...
Compiling './bin/start_state_machine.py'...
Compiling './bin/yaml_to_graphviz.py'...
***   File "./bin/yaml_to_graphviz.py", line 136
    print chl
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.11.egg-info'...
Listing './lib/python3.5/site-packages/aws_lambda_fsm'...
Compiling './lib/python3.5/site-packages/aws_lambda_fsm/aws.py'...
***   File "./lib/python3.5/site-packages/aws_lambda_fsm/aws.py", line 880
    except ClientError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aws_lambda_fsm/fsm.py'...
***   File "./lib/python3.5/site-packages/aws_lambda_fsm/fsm.py", line 145
    except (ImportError, ValueError), e:  # pragma: no cover
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aws_lambda_fsm-0.10.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
